--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div>
-            <h1><a href="http://127.0.0.1:8000/admin/">Science Share</a></h1>
+            <h1><a href="http://127.0.0.1:8000/admin/">我老婆李晓娜最美</a></h1>
         </div>
 
         <div>
