--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,14 @@
+    {% load static %}
 <html>
     <head>
         <title>scishare</title>
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     </head>
     <body>
         <div>
             <h1><a href="https://hdb.pythonanywhere.com/admin/">我老婆李晓娜最美</a></h1>
-            <p>{{ posts }}</p>
         </div>
         {% for post in posts %}
             <div>
